fix(tabs): only allow overflow on x axis

--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -134,7 +134,7 @@
     @include carbon--breakpoint(md) {
       display: flex;
       transition: inherit;
-      overflow: scroll;
+      overflow-x: scroll;
       max-width: 100%;
       max-height: none;
     }
